refactor(api): migrate to prisma
